# Rag_Crew_Profiler

./: .gitignore  README.md  Yelp_Multi_Agent_Review_Prediction_Report.md  crewai_simulation_agent.py  dpo_lab.py  implementation_plan.md  pipeline_report_20260612_173053.json  pyproject.toml  run_pipeline.py  task.md
docs/: RAG_Index_Student_Guide.md  RAG_Index_Student_Guide_EN.md  week10_simulator_integration.md  week11_openevolve_plan.md
docs/tutorial/: step1_data_objective.md  step5_tasks.md  step7_main_py.md
openevolve_yelp/: README.md  config.yaml  evaluator.py  initial_program.py
src/first_crew/: benchmark_indexing.py  benchmark_rag.py  crew.py  main.py
src/first_crew/config/: agents.yaml  tasks.yaml
src/first_crew/tools/: local_lookup.py
websocietysimulator/llm/: llm.py
