[project]
name = "first_crew"
version = "0.1.0"
description = "first_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "cohere>=5.20.7",
    "crewai[google-genai,tools]",
    "fastapi>=0.136.0",
    "google-generativeai>=0.8.6",
    "langchain>=0.3.0",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.23",
    "litellm>=1.75.3",
    "lmdb>=2.2.0",
    "nltk>=3.9.4",
    "pandas>=2.3.3",
    "sentence-transformers>=3.0.0",
    "tqdm>=4.67.3",
]

[project.scripts]
first_crew = "first_crew.main:run"
run_crew = "first_crew.main:run"
train = "first_crew.main:train"
replay = "first_crew.main:replay"
test = "first_crew.main:test"
run_with_trigger = "first_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/first_crew"]
